Add Light Component, Multi-Lighting

--- a/MyComponentEngine/MyComponentEngine_2010.vcxproj
+++ b/MyComponentEngine/MyComponentEngine_2010.vcxproj
@@ -387,6 +387,8 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Global.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="MainCamera.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
@@ -398,6 +400,8 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="LightManager.h" />
     <ClInclude Include="MainCamera.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MeshRenderer.h" />
