Rendering Stretch Fix, MyMath Init
렌더링 늘어나는 문제 해결
MyMath함수 구현 기본

--- a/MyComponentEngine/MyComponentEngine_2010.vcxproj
+++ b/MyComponentEngine/MyComponentEngine_2010.vcxproj
@@ -146,6 +146,7 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>DXUT.h</PrecompiledHeaderFile>
+      <AdditionalOptions>/FS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
@@ -414,6 +415,7 @@
     <ClInclude Include="MainCamera.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MeshRenderer.h" />
+    <ClInclude Include="MyD3DXMath.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Shader.h" />
