MyD3DXMath Bug Fix
include 할 때 중복선언되는 문제 해결

--- a/MyComponentEngine/MyComponentEngine_2010.vcxproj.filters
+++ b/MyComponentEngine/MyComponentEngine_2010.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClCompile Include="Font.cpp">
       <Filter>Engine\Components\6_Text\Font</Filter>
     </ClCompile>
+    <ClCompile Include="MyD3DXMath.cpp">
+      <Filter>MyDXUT</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
